feat: bible to db, attempt to fix virtualization
